@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.50-1lsb3.2.i486.rpm 3471362 BLAKE2B 782cd688dbe2c1284bd91e7e8f150500fefe225baf4acf36ebed99604421caa85fa613daa2de1890ff5bb3a69197d26cc92f20dd1741fa685f11e041a9d52736 SHA512 61385d8cf0913c4532a50eebbf967bcb953c2c137fae577f09b14002f1d38ef72ef7f32b61574785b471d1e092331c955d446476dbebc3533551ea44165a5023
-DIST epson-inkjet-printer-escpr2-1.1.50-1lsb3.2.x86_64.rpm 3470916 BLAKE2B a5bfbbad241c92b9c0b63ea520857aa6fb21e62c9a6cb3da8ae89e9fa43b6a0ba0f303be229171f24542fbf48b56c1609e6e43a075d28f716c2d5b2459ebd70e SHA512 76ac6110e827a933cda32bce7885379343f730545235d6f5726619b1d9f768504e53fb1f2fae3e1808b50e818d510198b400e77c6e488dc0361678b4d3e5e32f
 DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.i486.rpm 3515561 BLAKE2B 18f62f9214c94cddce81c69aa86d5ad545716f54f88fc2aefa66f28d1fec0fe502880776dfdf7deb46431fe9c928e14c60a33e2e287bfeb353640693b1cc9633 SHA512 e037df5f4cc7407bc3a7b6e141a502ef15348e2aaa70630104876e898594459b9197d98923f6273b84646910eb3109b444cf956f58d9224e9e93f7b46b8eb82a
 DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.x86_64.rpm 3515117 BLAKE2B 8c81f70f4ba2fbe10588261e1e8bfd3be0ec4ebabca28a1fd7e271ba3d70eaf9f7a0c3f4af1620c4002bafe438b433b930b5b6a8a1457ea64a663a7ff593db51 SHA512 e6972e268b08e19ebb5edb26dbce21128bb36978dbafab310baf1d3d68064ecadfd2502e1f98be148b0e32fd9e40363cbb98c0fd18b10d19dbd5057e414cb3e5
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.50.ebuild 1670 BLAKE2B e64f37f60648b98f4d939c79531b02b5be2d391d3ae32987c5fbea0b9e3a313c7eea77aa447539ad236656dcbcd5159d1a014633a08848363c658d9694015a0d SHA512 bd68395fafc59fcc9cdef74d422e53d486ed3d7c7ea269044b3cc36662fe0b167f0f08c78052043b8bc4a473375e5923a76b80b4b535bf09d8e2da9158769332
+DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.i486.rpm 3557948 BLAKE2B 5c135048fe4b4b1a7d6503c7f313baaf7c31a4582d29569023e67fca9a6e793ff1f48bd9e24cb707a57153e22ec8669934307193c3dd3f9009ff43cf3dff3575 SHA512 e3ef3174a1bfff4c66e318cc27650607cf9af7dea107bc56adee81ffdcbee4a13a68bd2ed8641f837b7db1937ee3fab3fe243c84380c671724bd083daadda638
+DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.x86_64.rpm 3557459 BLAKE2B 5f538657a6491697debee838ef95357d0b057e478c8958fdfd0cd0700cea8f270a4fb4d15944346ac909e8eccc38a92300e3f4572f475c3dfa233a1bea91e91d SHA512 909edc9a9e097bc8f6f16cd011b5c679b1f1188a2c403c6ad1515362f72666f96978c30a1fbfdc9ddd1eb72801885822aab43792c18fa4f1797f4614043cb958
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.52.ebuild 1670 BLAKE2B d1ff175139a1226586cc8059559971e7d7b003c96e9afab13721099d0bcf81b6e81811909447c2dbe62f6120a7614f5a507f2c89a40c6b31d7d00fd39724f161 SHA512 4d9a3a0fa0db4516c174d12081e7c7406c11719ad8b7bd6a90403c1c700198d8baebb371e55c008379838042d148204f9a26690124d6aa91f4c6fe2d60b106a8
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.53.ebuild 1670 BLAKE2B 8d8746ee54aae39488a800aee2873a081278433b76fcd04096c82dc407398c000b5d95d5c504d9819ff44e4fe3544fde82e6f59034a0dd9c6a7a3d02a768a2b1 SHA512 40aad9451dd13f9370e5d3b11e49ced6fd1242484c4136c8809bb1ccb2184c5317ebfb0c7c07955947c300cc6803442411213e26ba59387fc93495d446f3cc89
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
