@@ -3,7 +3,7 @@
 
 EAPI=6
 
-DSC_src="f/03/00/13/92/52/897a57c5c7b91b6ce88232a4480035fb2144eb42"
+DSC_src="f/03/00/14/04/42/6e776eb61a5e6f8971bb48c76a8c209b01d8a630"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver"
 HOMEPAGE="https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX"
